--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,3 +9,10 @@ test:
     - pip install -r requirements.txt
     - pip install -r test_requirements.txt
     - PYTHON=. py.test --verbose -s
+docker:
+  image: docker:stable
+  services:
+    - docker:dind
+  stage: docker_build
+  script:
+  - docker build -t myapp .
