--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ test:
   script:
     - pip install -r requirements.txt
     - pip install -r test_requirements.txt
-    - PYTHON=. py.test --verbose -s
+    - PYTHONPATH=. py.test --verbose -s
 docker:
   image: docker:stable
   services:
