--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ script:
   - make lint
   - make test
   - make docker_build
+  - make docker_run
+  - sleep 3; make test_api 
+after_succes:
   - make docker_push
   - make test_xunit
 deploy:
